--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "socket-chess",
   "version": "0.0.1",
   "description": "Fast chess with your buds!",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.15.2",
+    "socket.io": "^2.0.4"
+  }
 }
